--- a/resources/views/admin/clientForm.ejs
+++ b/resources/views/admin/clientForm.ejs
@@ -158,5 +158,5 @@
   >
     Salvar
   </button>
-  <button type="button" class="modal-close">Fechar</button>
+  <button type="button" class="client-modal-close">Fechar</button>
 </form>
