--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -4,7 +4,7 @@
       type="button"
       class="
         btn-primary
-        modal-open
+        modal-order-open
         py-1
         px-6
         rounded-full
@@ -33,3 +33,39 @@
     </table>
   </div>
 </section>
+<div
+  class="
+    orderModal
+    opacity-0
+    pointer-events-none
+    fixed
+    w-full
+    h-full
+    top-0
+    left-0
+    flex
+    items-center
+    justify-center
+  "
+>
+  <div
+    class="modal-overlay absolute w-full h-full bg-gray-900 opacity-50"
+  ></div>
+
+  <div
+    class="modal-container bg-white m-0 rounded shadow-lg z-50 overflow-y-auto"
+  >
+    <!-- Add margin if you want to see some of the overlay behind the modal-->
+    <div class="modal-content py-4 text-left px-6">
+      <!--Title-->
+      <div class="modalOrderInputs">
+        <div class="orderInputModal">
+          <!--Body-->
+          <%- include('./orderForm.ejs') %>
+        </div>
+      </div>
+      <!--Footer-->
+      <div class="flex justify-end pt-2"></div>
+    </div>
+  </div>
+</div>
