--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -17,7 +17,7 @@
         </label>
         <input
           name="username"
-          value="<%= messages.name  %>"
+          value="<%= messages.username  %>"
           class="
             shadow
             appearance-none
@@ -34,6 +34,31 @@
           id="username"
           type="text"
           placeholder="Digite seu nome"
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="phone">
+          Telefone
+        </label>
+        <input
+          name="phone"
+          value="<%= messages.phone  %>"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
+          id="phone"
+          type="text"
+          placeholder="Digite seu Telefone"
         />
       </div>
       <div class="mb-4">
