--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -23,6 +23,7 @@
     />
     <link rel="stylesheet" href="/css/app.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   </head>
 
