--- a/resources/scss/_variables.scss
+++ b/resources/scss/_variables.scss
@@ -1,6 +1,6 @@
 //Cores
-$primary: #fe5f1e;
-$primary-hover: #b23301;
+$primary: #5dfe1e;
+$primary-hover: #2ab201;
 $secondary: #f8f8f8;
 
 $pure: #fff;
