--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -17,23 +17,40 @@
 </section>
 <section id="container" class="menu container mx-auto py-8">
   <h1 class="text-xl font-bold mb-8">Todos os Itens</h1>
-  <div class="grid grid-cols-4 gap-x-12 gap-y-16">
-    <% pizzas.forEach(function (pizza){ %>
-    <div class="w-64">
+  <div
+    class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16"
+  >
+    <% products.forEach(function (product){ %>
+    <div class="w-full md:w-64">
       <img class="h-40 mb-4 mx-auto" src="/img/<%= pizza.image %>" alt="" />
       <div class="text-center">
         <h2 class="mb-4 text-lg"><%= pizza.name %></h2>
-        <span class="size py-1 px-4 rounded-full uppercase text-xs"
-          ><%= pizza.size %></span
+
+        <% pizza.sizes.forEach(function (size){%>
+        <button
+          type="button"
+          data-pizza="<%= JSON.stringify(pizza)
+            %>"
+          id="<%= size %>"
+          class="size py-1 px-4 rounded-full uppercase text-xs"
         >
-        <div class="flex items-center justify-around mt-6">
+          <%= size %>
+        </button>
+        <% })%>
+        <div>
+        <input data-pizza="<%= JSON.stringify(pizza)
+        %>" id="half"type="checkbox" class="half font-bold text-lg mt-4"> Meia</input>
+      </div>
+        <div class="flex flex-col tems-center justify-around mt-1">
           <span class="font-bold text-lg">R$ <%= pizza.price %></span>
           <button
-            data-pizza="<%= JSON.stringify(pizza) %>"
-            class="add-to-cart py-1 px-6 rounded-full flex items-center font-bold"
+            data-pizza="<%= JSON.stringify(pizza)
+            %>"
+            id= <%= pizza.id %>
+            class="add-to-cart py-1 px-6 rounded-full mx-8 my-4 font-bold"
           >
             <span>+</span>
-            <span class="ml-4">Adicionar</span>
+            <span class="m-4">Adicionar</span>
           </button>
         </div>
       </div>
