--- a/resources/views/auth/register.ejs
+++ b/resources/views/auth/register.ejs
@@ -16,12 +16,49 @@
           Nome
         </label>
         <input
-          name="name"
-          value="<%= messages.name  %>"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+          name="username"
+          value="<%= messages.username  %>"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
           id="username"
           type="text"
           placeholder="Digite seu nome"
+        />
+      </div>
+      <div class="mb-4">
+        <label class="block text-gray-700 text-sm font-bold mb-2" for="phone">
+          Telefone
+        </label>
+        <input
+          name="phone"
+          value="<%= messages.phone  %>"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
+          id="phone"
+          type="text"
+          placeholder="Digite seu Telefone"
         />
       </div>
       <div class="mb-4">
@@ -34,8 +71,20 @@
         <input
           name="email"
           value="<%= messages.email  %>"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
-          id="username"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
+          id="email"
           type="email"
           placeholder="Digite seu e-mail"
         />
@@ -49,15 +98,39 @@
         </label>
         <input
           name="password"
-          class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3 leading-tight focus:outline-none focus:shadow-outline"
+          class="
+            shadow
+            appearance-none
+            border
+            rounded
+            w-full
+            py-2
+            px-3
+            text-gray-700
+            mb-3
+            leading-tight
+            focus:outline-none
+            focus:shadow-outline
+          "
           id="password"
           type="password"
           placeholder="******************"
+          autocomplete="on"
         />
       </div>
       <div class="flex items-center justify-between">
         <button
-          class="btn-primary rounded-full text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+          class="
+            btn-primary
+            rounded-full
+            text-white
+            font-bold
+            py-2
+            px-4
+            rounded
+            focus:outline-none
+            focus:shadow-outline
+          "
           type="submit"
         >
           Registrar
