--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -13,8 +13,8 @@
       >
         <img class="w-24" src="/img/<%= product.item.image %>" alt="" />
         <div class="flex-auto ml-4">
-          <h1><%= product.item.name %></h1>
-          <span><%= product.item.size %></span>
+          <h1 style="width: 150px" ><%= product.item.name %></h1>
+          
         </div>
         <div class="flex-auto">
           <button
@@ -22,7 +22,7 @@
             class="
               removeItem
               btn-primary
-              mx-4
+              mx-2
               px-4
               text-white
               rounded-md
@@ -32,44 +32,24 @@
           >
             Remover
           </button>
-          <button
-            data-cart="<%= JSON.stringify(product.item) %>"
-            class="
-              decreaseItemQty
-              btn-primary
-              mx-4
-              px-4
-              text-white
-              rounded-md
-              font-size- font-bold
-            "
-            type="button"
-          >
-            -
-          </button>
-          <span id="productQty<%= product.item._id %>"
-            ><%= product.itemTotalQty %>
-          </span>
-          <button
-            data-cart="<%= JSON.stringify(product.item) %>"
-            class="
-              increaseItemQty
-              btn-primary
-              mx-4
-              px-4
-              text-white
-              rounded-md
-              font-size- font-bold
-            "
-            type="button"
-          >
-            +
-          </button>
+          <input type="number" 
+            data-item='<%= JSON.stringify(product.item) %>'
+            min="0"
+            value="<%= product.itemTotalQty %>" style="width: 3rem" class="cartItemQuantity border-gray-500 w-12 mx-2 text-center">
+          </input>
+          <span class="text-sm mx-2"><%= product.item.saleUnit.saleUnit %></span>
+          <span class="text-sm mx-2">x</span>        
+          <span class="text-sm mx-2"><%= product.item.saleUnit.price.toLocaleString('pt-BR', { style: 'currency',
+            currency: 'BRL' }) %></span>
         </div>
         <span
-          id="productItemTotal<%= product.item._id %>"
+          id="cartItemTotal<%= product.item._id %>"
           class="font-bold text-lg"
-          >R$ <%= product.item.saleSize.price * product.itemTotalQty %></span
+          ><%= (product.item.saleUnit.price * product.itemTotalQty).toLocaleString('pt-BR', { style: 'currency',
+          currency: 'BRL',
+          minimumFractionDigits: 2,
+          maximumFractionDigits: 2
+           }) %></span
         >
       </div>
       <% } %>
@@ -77,21 +57,23 @@
     <hr />
     <div class="flex justify-between">
       <div class="flex-1 flex-col py-4">
-        <span class="text-lg font-bold">Observações</span>
-        <textarea class="h-24 w-full"></textarea>
+        <span  class="text-lg font-bold">Observações</span>
+        <textarea id="observation" name="observation" form="orderForm" class="h-24 w-full"></textarea>
       </div>
       <div class="text-right py-4">
         <div class="justify-between grid-cols-2 align-center m-0">
           <div>
             <span class="text-lg font-bold">Total do pedido:</span>
             <span id="amount" class="amount text-2xl font-bold ml-2 mr-0"
-              >R$ <%= session.cart.totalPrice %></span
+              ><%= session.cart.totalPrice.toLocaleString('pt-BR', { style: 'currency',
+              currency: 'BRL' }) %></span
             >
           </div>
         </div>
 
         <div class="paymentMethod">
           <select
+          form="orderForm"
             id="paymentMethod"
             name="paymentMethod"
             class="
@@ -120,17 +102,12 @@
           >
           <span class="text-sm mb-4">Se não precisa, só deixar em branco.</span>
           <input
-            class="
-              ml-auto
-              mr-0
-              border border-gray-400
-              px-12
-              py-2
-              w-1/4
-              rounded-md
-            "
-            type="text"
-            placeholder="R$ 0,00"
+          name="needChange"
+          form="orderForm"
+          class="border border-gray-400 rounded-md pl-6 px-2 py-2 w-1/2 mr-0 ml-auto"
+          type="number"
+          placeholder="R$ 0,00"
+          max="200"
           />
         </div>
       </div>
@@ -303,14 +280,7 @@
             type="hidden"
           />
         </div>
-        <div class="form-control">
-          <input
-            type="hidden"
-            name="paymentMethodValue"
-            id="paymentMethodValue"
-            value=""
-          />
-        </div>
+     
         <div id="order-btn" class="mt-4">
           <button
             id="ordernowbtn"
