--- a/resources/views/layout.ejs
+++ b/resources/views/layout.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Top Pizza</title>
+    <title>Green Food</title>
     <script
       src="https://kit.fontawesome.com/ecb358af67.js"
       crossorigin="anonymous"
@@ -23,19 +23,36 @@
     />
     <link rel="stylesheet" href="/css/app.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
   </head>
 
   <body>
-    <nav class="container mx-auto flex items-center justify-between py-4">
+    <nav
+      class="
+        headContainer
+        container
+        mx-auto
+        flex
+        items-center
+        justify-between
+        py-4
+      "
+    >
       <div>
         <a href="/"
-          ><img width="100" height="100" src="/img/logo.png" alt="logo"
+          ><img
+            width="100"
+            height="100"
+            src="/img/logo.png"
+            alt="logo"
+            class="homelogo"
         /></a>
       </div>
       <div>
         <% if (user) { %>
         <span id="" class=""
-          >Bem Vindo <strong><%= user.name %></strong> !</span
+          >Bem Vindo, <strong><%= user.username %></strong> !</span
         >
         <%}%>
       </div>
@@ -44,7 +61,8 @@
           <% if (user) { %> <% if (user.role == 'admin') { %>
           <li class="ml-6"><a href="/">Menu</a></li>
           <li class="ml-6"><a href="/admin/orders">Pedidos</a></li>
-          <li class="ml-6"><a href="/">Clientes</a></li>
+          <li class="ml-6"><a href="/admin/clients">Clientes</a></li>
+          <li class="ml-6"><a href="/admin/products">Produtos</a></li>
           <li class="ml-6">
             <form id="logout" action="/logout" method="POST">
               <a onclick="document.getElementById('logout').submit()" href="#"
@@ -73,7 +91,15 @@
           <li class="ml-6">
             <a
               href="/cart"
-              class="inline-block px-4 py-2 rounded-full flex items-center"
+              class="
+                cartImg
+                inline-block
+                px-4
+                py-2
+                rounded-full
+                flex
+                items-center
+              "
             >
               <span id="cartCounter" class="text-white font-bold pr-2"
                 ><%= session.cart ? session.cart.totalQty: '' %></span
@@ -84,11 +110,30 @@
         </ul>
       </div>
     </nav>
+
     <%- body %>
     <footer></footer>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/app.js"></script>
-
+    <script src="/js/searchzipcode.js"></script>
+    <script src="/js/searchUser.js"></script>
+    <script src="/js/searchProduct.js"></script>
+    <script src="/js/hideElements.js"></script>
+    <script src="/js/validate.js"></script>
+    <script>
+      $(document).ready(function () {
+        $('.date').mask('11/11/1111');
+        $('.time').mask('00:00:00');
+        $('.date_time').mask('00/00/0000 00:00:00');
+        $('.cep').mask('00000-000');
+        $('.phone').mask('0000-0000');
+        $('.phone_with_ddd').mask('(00) 0000-0000');
+        $('.phone_us').mask('(000) 000-0000');
+        $('.mixed').mask('AAA 000-S0S');
+        $('.cpf').mask('000.000.000-00', { reverse: true });
+        $('.money').mask('000.000.000.000.000,00', { reverse: true });
+      });
+    </script>
     <!-- <script src="../js/validate.js"></script> -->
   </body>
 </html>
