adicionado integração com cloudinary

--- a/resources/views/admin/products.ejs
+++ b/resources/views/admin/products.ejs
@@ -67,7 +67,7 @@
         <tr>
           <td class="id" style="display: none"><%= product._id%></td>
           <td class="productData">
-            <img class="h-12 mx-auto" src="/img/<%= product.image %>" alt="" />
+            <img class="h-12 mx-auto" src="<%= product.image %>" alt="" />
           </td>
           <td class="productData">
             <h2 class="text-lg"><%= product.name %></h2>
