--- a/resources/views/customers/cart.ejs
+++ b/resources/views/customers/cart.ejs
@@ -11,7 +11,7 @@
         id="productData<%= product.item._id %>"
         class="flex items-center my-8"
       >
-        <img class="w-24" src="/img/<%= product.item.image %>" alt="" />
+        <img class="w-24" src="<%= product.item.image %>" alt="" />
         <div class="flex-auto ml-4">
           <h1 style="width: 150px" ><%= product.item.name %></h1>
           
