--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -36,7 +36,7 @@
   >
     <% products.forEach(function (product){%>
     <div class="w-full md:w-64">
-      <img class="h-40 mb-4 mx-auto" src="/img/<%= product.image %>" alt="" />
+      <img class="h-40 mb-4 mx-auto" src="<%= product.image %>" alt="" />
       <div class="text-center">
         <h2 class="mb-4 text-lg"><%= product.name %></h2>
         <div class="flex flex-row justify-evenly">
